# nextham_opti

./: .gitignore  Readme.md  combine_data_infer.py  environment.yml  full_inference_pipeline_hybrid.sh  full_inference_pipeline_python.sh  index.html  infer.py  list.sh  nxraw_io.py  plot.py  target.txt
nets/: graph_attention_transformer.py  nextham.py  tracegrad.py
pre_post_process/: post_process.py  pre_process.py  timing_utils.py
pre_post_process/cpp/: CMakeLists.txt  block_parser.cpp  block_parser.h  csr_parser.cpp  csr_parser.h  main.cpp  neighbor_list.cpp  neighbor_list.h  stru_parser.cpp  stru_parser.h  transformer.cpp  transformer.h
pre_post_process/scripts/: add_element.py  compare_pth.py  convert_block_to_csr.py  output_hs_data.py  outwf.py  plot_band.py  plot_compare_bands.py  read_hs_data.py  read_hs_data_v2.py
scripts/infer/: infer.sh
tests/: nxraw_1000_atom.py  preprocess_1000_atom.py
